--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,5 +10,11 @@
 	"background": {
 		"service_worker": "background.js"
 	},
+	"content_scripts": [
+		{
+			"matches": ["<all_urls>"],
+			"js": ["content.js"]
+		}
+	],
 	"permissions": ["activeTab", "tabs", "history", "notifications", "storage"]
 }
